Updated file io to be able to handle local files for images
e.g. "file://C:/path/to/file.png" in a cell would instead move the file
locally to the right place instead of attempting to download it (which
would blow up)